# symbios

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  symbios.pc.in
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt
benchmark/doc/: TestCases.txt
benchmark/include/benchmark/: arguments.h  benchmark.h  file.h  io_client.h  io_client_factory.h  mongo.h  orangefs.h  redis.h  rng.h
benchmark/scripts/benchmark/orange/: experiments.sh  terminate.sh
benchmark/scripts/benchmark/orange/conf/big/: basic.conf
benchmark/scripts/benchmark/orange/conf/small/: basic.conf
benchmark/scripts/benchmark/orange/conf/ssd/: basic.conf  write_optimize.conf
benchmark/scripts/benchmark/orange/hostfiles/: hostfile_clients
benchmark/scripts/paper_test/: shadow.sh
benchmark/scripts/service/: symbios.service
benchmark/src/: benchmark.cpp  mongo.cpp  orangefs.cpp  redis.cpp
benchmark/src/benchmark/: benchmark.cpp  benchmark.h  file.h  io_client.h  io_client_factory.h  kvs.h  mongo.h  orangefs.h  redis.h  rng.h
colocation/: analysis.sh  clients  colocate.sh  nodes  ofs_only.sh  ofs_redis.sh  pat.sh  redis.sh  redis_idle_ofs.sh  servers
colocation/Redis/: CMakeLists.txt  main.c  read.csv  write.csv
common/include/: debug.h
common/include/common/: arguments.h  debug.h  error.h  iris.h  replayer.h
common/scripts/: avail_nodes.sh
common/src/common/: debug.cpp  iris.cpp
common/test/unit/: CMakeLists.txt
conf/: base_symbios.conf  symbios.conf  test.conf  test_orig.conf
conf/server_lists/: single_node_symbios_server
conf/symbios_test/: Dynamic.conf  Heuristic.conf  Random.conf  RoundRobin.conf
docker/: DockerFile  Dockerfile
include/symbios/: client.h  symbios.h
include/symbios/client/: client.h  posix.h  test.h
include/symbios/common/: configuration_manager.h  constants.h  data_structure.h  enumerations.h  error_codes.h  error_definition.h
include/symbios/server/: server.h
internal_component/colocation/: colocation.sh  colocation_time_overlap_ratio.sh
internal_component/engine/: common.h  engine.sh  io_mongo.c  io_mongo.h  io_redis.c  test_engine.c  test_redis.c
internal_component/shadow_link/: Makefile  common.c  common.h  io_mongo.c  test_link_mongo.c
old/colocation/: colocate.sh  ior.sh  ofs_idle_redis.sh  ofs_only.sh  ofs_redis.sh  ofs_redis_affinity.sh  redis_only.sh  rename.sh  stitch.sh
old/colocation/Redis/: redis.c  redis.h
old/internal_component/colocation/: colocation_node_overlap_ratio.sh  colocation_time_overlap_ratio.sh
old/internal_component/engine/: Makefile  common.c  io_redis.h  test_engine.c  test_mongo.c
old/internal_component/shadow_link/: common.h  io_mongo.c  io_mongo.h  io_redis.c  io_redis.h  test_link_redis.c
old/old_MongoDB/: deploy.sh
old/single_hop/mongodb/: Makefile  insert_mpi.c  link_mongo.h  query.c
old/single_hop/redis/: link_redis.c  link_redis.h  redis_create_shadow_mt.c  test_creation.sh  test_redis_shadow.sh
old/single_hop/xattr/: Makefile  common.h  getxattr.c  link_fs.c  link_fs.h  setxattr.c
scripts/benchmark/orange/: .Readme.swo  .Readme.swp  Readme  deploy.sh  experiments.sh  terminate.sh
scripts/deployment/: deploy_iris.sh  deploy_niobi.sh  deploy_symbios.sh  mongodb_r.sh  mongodb_s.sh  orangefs_r.sh  orangefs_s.sh  redis_r.sh  redis_s.sh  terminate_iris.sh  terminate_niobi.sh  terminate_symbios.sh
scripts/distributed/: run_mongo_cluster.sh  stop_mongo_cluster.sh
scripts/distributed/MongoDB/: deploy.sh  env_ares.sh  start-mongodb.sh  stop-mongodb.sh  terminate.sh
scripts/distributed/OrangeFS/: deploy.sh  terminate.sh
scripts/distributed/Redis/: deploy.sh  start.sh  stop.sh  terminate.sh
scripts/distributed/hostfile/: client  mongo_server_iris  orange_server_iris  redis_server_iris  server_symbios
scripts/local/: checking_mongo_shard.sh  run_mongo.sh  run_mongo_cluster.sh  run_redis_cluster.sh  stop_mongo.sh  stop_mongo_cluster.sh  stop_orangefs.sh  stop_redis_cluster.sh
scripts/paper_test/: dde.sh
scripts/storage_cost_predictor/: test.sh
scripts/trace/: application_tree.trace  trace.trace
single_hop/mongodb/: insert.c  link_mongo.c
single_hop/redis/: Makefile  link_redis.h  redis_create_shadow.c  redis_create_shadow_mt.c
single_hop/xattr/: Makefile  common.c  common.h  error_functions.c  header.c  header_mpi.c  setxattr.c  test_creation.sh  test_getxattr.sh
src/client/: client.cpp
src/data_placement/: dp_data_placement.h  heuristics_data_placement.cpp
src/io_clients/: data_structure.h  file_io.cpp  file_io.h  io.h  io_factory.h  key_value_store_io.h  mongo_io.cpp  mongo_io.h  redis_io.cpp  redis_io.h  singleton.h
src/server/: Daemon.cpp  Daemon.h  configuration_manager.h  data_structures.h  main.cpp  server.cpp  server.h
src/storage_cost_predictor/: storage_cost_predictor.cpp
src/symbios/client/: Posix.cpp  client.cpp  posix.cpp  redis.cpp
src/symbios/common/: data_structure.cpp
src/symbios/data_distribution/: data_distribution.h  data_distribution_factory.h  dp_dde.cpp  dp_dde.h  heuristics_dde.cpp  heuristics_dde.h  random_dde.cpp  random_dde.h  round_robin_dde.cpp  round_robin_dde.h
src/symbios/data_placement/: data_placement.h  data_placement_factory.h  dp_data_placement.cpp  dp_data_placement.h  heuristics_data_placement.cpp  heuristics_data_placement.h  random_data_placement.cpp  random_data_placement.h  round_robin_data_placement.cpp  (+1 more)
test/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/integration/apps/cm1_kmeans/: test.cpp
test/integration/apps/cm1_kmeans/traces_cm1_kmeans/: CM1.csv  Kmeans.csv
test/integration/apps/wrf/: test.cpp
test/integration/apps/wrf/traces_wrf/: WRFA.csv  WRFC.csv
test/integration/dde/: test.cpp
test/integration/shadow_link/: test.cpp
test/unit/: CMakeLists.txt  github_test.cpp
test/unit/client/: client.cpp  test.cpp  test.sh
test/unit/config_manager/: test.cpp
test/unit/data_placement/: test.cpp
test/unit/io_clients/mongo_io/: test.cpp
test/unit/iris_emu/: iris.cpp  iris.h  test.cpp
test/unit/posix/: test.cpp
test/unit/storage_cost_predictor/: test.cpp
(+115 files in other folders)
